<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/merriweather_light"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/green_3"
            android:textSize="45sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextUsername"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_hint"
            android:textColorHint="@color/green_1"
            android:inputType="text"
            android:padding="13dp"
            android:background="@android:drawable/editbox_background"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:textColorHint="@color/green_1"
            android:inputType="textPassword"
            android:padding="13dp"
            android:background="@android:drawable/editbox_background"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="Войти"
            android:backgroundTint="@color/green_2"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/merriweather_light"/>

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="Зарегистрироваться"
            android:backgroundTint="@color/green_3"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:fontFamily="@font/merriweather_light"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>